# v2g-demo

./: CMakeCache.txt  CMakeLists.txt  ImportMdf4.cpp  ImportMdf4.h  Makefile  Ptrlist.h  README.md  Test.mf4  cmake_install.cmake  dynArray.h  export.cpp  index.html  init.js  m4DumpCL.cpp  m4DumpCL.h  md5.cpp  md5.h  mdFile.cpp  mdFile.h  mdf4.cpp  mdf4.h  mdfConfig.h  mdfTypes.h  mdflib.js  mdflib.wasm  measure.cpp  stdafx.cpp  stdafx.h  utf8.h  worker.js
.github/workflows/: cmake-single-platform.yml
build-bin/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  massif.out.666538  massif.out.688776  mdflib
build-wasm/: CMakeCache.txt  Makefile  cmake_install.cmake  index.html  mdflib.js  mdflib.wasm  mdflib.wasm.map  worker.js
